--- a/www/css/index.css
+++ b/www/css/index.css
@@ -37,6 +37,7 @@ body{
 
 
  #header {
+    position: fixed;
     width: 100%;
     height: 48px;
     background-color: #F2F2F2;
@@ -180,14 +181,13 @@ button{
     width: 50%;
     float: left;
     font-family: 'Roboto', sans-serif;
-    font-size: 2em;
+    font-size: 1em;
     font-weight: 500;
     padding: 10% 0 0 5%;
-    line-height: 30px;
+    line-height: 15px;
 }
 
 .valor_andamento{
-    float: right;
     font-family: 'Roboto', sans-serif;
     font-size: 4em;
     font-weight: 800;
@@ -283,7 +283,7 @@ button{
     float: left;
     position: fixed;
     bottom: 0;
-    width: 50%;
+    width: 100%;
     height: 45px;
     background-color: #ccc;
 }
@@ -305,11 +305,7 @@ button{
 
 .status_metas img{
     float: left;
-    font-family: 'Roboto', sans-serif;
-    font-size: 0.8;
-    font-weight: 500;
-    padding: 15px 0 0px 5%;
-    line-height: 25px;
+    padding: 5px 0 0px 5%;
     text-align: center;
 }
 
@@ -333,11 +329,7 @@ button{
 
 .Objetivos_metas img{
     float: left;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1em;
-    font-weight: 500;
-    padding: 15px 0 0px 5%;
-    line-height: 25px;
+    padding: 5px 0 0px 5%;
     text-align: center;
 }
 
