--- a/www/css/index.css
+++ b/www/css/index.css
@@ -39,35 +39,36 @@ body{
  #header {
     position: fixed;
     width: 100%;
-    height: 48px;
-    background-color: #F2F2F2;
+    height: auto;
+    background-color: #fff;
     text-align: center;
-   
-            }
+    box-shadow:         0px 3px 7px 0px rgba(109, 109, 109, 0.50);
+    webkit-box-shadow: 0px 3px 7px 0px rgba(109, 109, 109, 0.50);
+    -moz-box-shadow:    0px 3px 7px 0px rgba(109, 109, 109, 0.50);
+}
 
-            #nav {
-                line-height: 30px;
-                background-color: #eeeeee;
-                height: 470px;
-                width: 40px;
-                float: left;
-                padding: 5px;
-            }
+#nav {
+    line-height: 30px;
+    background-color: #eeeeee;
+    height: 470px;
+    width: 40px;
+    float: left;
+    padding: 5px;
+}
+#ulListaObjetivos{
+    padding: 75px 0 0 0;
+    margin: 0;
+}
 
-            #section {
-                overflow: auto;
-                background-color: #eeeeee;
-                width: 100%;
-                float: left;
+#section {
+    overflow: auto;
+    background-color: #eeeeee;
+    width: 100%;
+    float: left;
          
-            }
+}
 
-            #footer {
-                color: white;
-                clear: both;
-                text-align: center;
-                padding: 5px;
-            }
+
 
 
 
@@ -95,19 +96,21 @@ button{
     display: block;
     float:left;
     width: 15%;
-    padding-top: 5px;
+    padding-top: 15px;
     height: 40px;
 }
 
 .logo{
     float: left;
     width: 70%;
-    padding-top: 5px;
+    padding: 8px 0;
 }
 .logo p{
-    font-family: 'Roboto', 'Arial', san serif;
+    font-family: 'Montserrat', 'Roboto', sans-serif;
     font-size: 0.8em;
-    margin: 0;
+    margin: 3px 0 0 0;
+    font-weight: 600; 
+
 }
 
 .logo img{
@@ -115,21 +118,25 @@ button{
     margin: 0;
 
 }
-.bt_menu{
+.bt_Configure{
     border: 0;
     background: none;
     display: block;
     float:left;
-    width: 15%;
-    padding-top: 5px;
+    padding-top: 15px;
 }
 
+#bt_Subprefeituras{
+    margin-top: 63px;
+}
 
 .subprefeitura{
     float: left;
     height: 45px;
     width: 100%;
     background-color:#DBDBDB;
+
+
 }
 
 .subpref{
@@ -184,10 +191,13 @@ button{
     font-size: 1em;
     font-weight: 500;
     padding: 10% 0 0 5%;
-    line-height: 15px;
+    line-height: 19px;
+    margin: 18px 0 0 0;
 }
 
 .valor_andamento{
+    float: right;
+    clear: right;
     font-family: 'Roboto', sans-serif;
     font-size: 4em;
     font-weight: 800;
@@ -195,7 +205,7 @@ button{
 }
 
 
-#metas_beneficiam{
+.metas_beneficiam{
     overflow: auto;
     width: 100%;
     height: auto;
@@ -226,7 +236,7 @@ button{
 
 
 
-#metas_concluidas{
+.metas_concluidas{
     overflow: auto;
     width: 100%;
     height: auto;
@@ -252,7 +262,7 @@ button{
     padding: 4% 15px 0 0;
 }
 
-#metas_superadas{
+.metas_superadas{
     overflow: auto;
     width: 100%;
     height: auto;
@@ -284,53 +294,56 @@ button{
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 45px;
-    background-color: #ccc;
+    height: 55px;
+    box-shadow:        0px -3px 7px 0px rgba(109, 109, 109, 0.50);
+    webkit-box-shadow: 0px -3px 7px 0px rgba(109, 109, 109, 0.50);
+    -moz-box-shadow:   0px -3px 7px 0px rgba(109, 109, 109, 0.50);
 }
 
 /*classes tela 2*/
 
 .status_metas {
     width: 50%;
-}
-.status_metas p{
+    height: 45px;
+    font-family: 'Montserrat', 'Roboto', sans-serif;
     float: left;
-    font-family: 'Roboto', sans-serif;
-    font-size: 0.8em;
+    font-size: 1.1em;
     font-weight: 500;
-    padding: 2px 0 0px 3%;
-    line-height: 25px;
-    text-align: center;
+    padding: 13px 0 0px 3%;
+    line-height: 15px;
+    text-align: left;
 }
 
 .status_metas img{
     float: left;
     padding: 5px 0 0px 5%;
     text-align: center;
+    margin-right: 15px;
 }
 
+.bt_border_ativo{
+    border-bottom: 4px solid #b71c1c;
+}
 
 .Objetivos_metas{
     float: right;
     width: 50%;
-    background-color: #eee;
-    height: 46px;
-    margin-top: 2px;
-}
-
-.Objetivos_metas p{
+    border-left: 2px solid #eee;
+    height: 45px;
+    font-family: 'Montserrat', 'Roboto', sans-serif;
     float: left;
-    font-family: 'Roboto', sans-serif;
-    font-size: 0.8em;
+    font-size: 1.1em;
     font-weight: 500;
-    padding: 5px 0 0px 5%;
-    text-align: center;
+    padding: 5px 0 0px 2%;
+    text-align: left;
+    line-height: 15px;
 }
 
 .Objetivos_metas img{
     float: left;
-    padding: 5px 0 0px 5%;
+    padding: 3px 0 0px 5%;
     text-align: center;
+    margin-right: 15px;
 }
 
 .status_tela{
