--- a/www/css/index.css
+++ b/www/css/index.css
@@ -30,7 +30,7 @@
 
 }
 
-body{
+body, p{
          -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
@@ -40,6 +40,7 @@ body{
     font-size: 1em;
 
 }
+
 
 
 
@@ -449,14 +450,13 @@ button{
 .status_tela{
     font-family: "roboto regular";
     color: #3b3b3b;
-    text-transform: uppercase;
-    margin-top: 45px;
-    padding: 21px 0 10px 0;
+    
+    margin-top: 55px;
     text-align: center;
     float: left;
     min-height: 45px;
     width: 100%;
-    background-color: #eee;
+    background-color: #fff;
     font-size: 1em;
 }
 
@@ -537,14 +537,11 @@ button{
 /*classes tela 3*/
 
 .status_tela div{
-    padding: 7px 0;
-    margin: 0 15px;
-     
+    padding: 5px 10px;
+    margin: 0 auto;
 }
 
-.status{
-    border-bottom: 2px solid #888787;
-}
+
 
 .margin-top-45px{
     margin-top: 45px;
@@ -569,19 +566,10 @@ button{
     height: auto;
     text-decoration: none;
     list-style: none;
-    padding: 5px 15px;
+    padding: 5px 0;
     margin: 0 auto;
+    text-align: left;
 }
-/*.desc_meta_tela3 ul li {
-    float: left;
-    width: 100%;
-    height: auto;
-    text-decoration: none;
-    list-style: none;
-    padding: 5px 25px;
-    margin: 0 auto;
-     
-}*/
 
 .meta_valor_tela3{
     margin-top: 10px;
@@ -623,6 +611,23 @@ button{
     margin: 3px;
     padding: 5px;
     background-color: #DBDBDB;
+}
+
+.box_info p{
+    font-size: 0.9em;
+}
+.box_info p strong{
+    color: #3e3e3e; 
+}
+
+
+
+.box_info{
+    overflow: hidden;
+    width: 100%;
+    float left;
+    margin: 3px;
+    padding: 5px;
 }
 
 .bg_gray2{
@@ -689,6 +694,9 @@ button{
     font-size: 1.6em;
 }
 
+.padding_t_10{
+    padding: 10px 0 0 0;
+}
 .padding_10{
     padding: 10px;
 }
@@ -764,4 +772,59 @@ text-align: center;
     background-position: left center;
 }
 
+/*classes tela 4 (projetos)*/
+
+#ulDetalhesProjeto{
+    font-family: 'roboto';
+    margin: 0 auto;
+    padding: 0;
+}
+
+.titulo_projetos h3{
+    text-transform: uppercase;
+    text-align: left;
+    margin: 0;
+}
+
+.titulo_projetos p{
+    text-align: left;
+    padding: 18px 0;
+    font-size: 1rem;
+    color: #212121;
+    margin: 0;
+}
+
+.dropbox_status{
+    text-transform: uppercase;
+    background-color: #f5f5f5;
+}
+.dropbox_status p{
+
+    padding: 6px 0;
+    margin: 0;
+}
+.pct_projeto{
+    text-align: center; 
+    font-size: 3.8rem;
+    color: #3e3e3e;
+}
+
+.gray_1{
+    color: #9a9a9a;
+}
+.gray_2{
+    color: #606060;
+}
+.gray_3{
+     color: #3e3e3e;
+}
+
+.font_12pt{
+    font-size: 0.8rem
+}
+.bg_gray_2{
+    background-color: #eeeeee
+}
+.uppercase{
+    text-transform: uppercase;
 }
