--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1372,7 +1372,7 @@ ul.list_interna_proj li{
 }
 
 #container_relativo{
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 0;
     margin: 0;
