correção dos erros no carregamento de dados e na navegação da tela "metas por" status para a "lista de metas por staus"

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -1372,7 +1372,7 @@ ul.list_interna_proj li{
 }
 
 #container_relativo{
-    position: relative;
+    /*position: absolute;*/
     width: 100%;
     height: 0;
     margin: 0;
