resolvido botão voltar da tela de detalhes da meta, implementado tela de aguarde

--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -8,14 +8,20 @@
     <feature name="SQLitePlugin">
         <param name="android-package" value="io.liteglue.SQLitePlugin" />
     </feature>
-    <splash density="land-hdpi" src="res/screen/android/splash_land_hdpi.png" />
-    <splash density="land-ldpi" src="res/screen/android/splash_land_hdpi.png" />
-    <splash density="land-mdpi" src="res/screen/android/splash_land_hdpi.png" />
-    <splash density="land-xhdpi" src="res/screen/android/splash_land_xhdpi.png" />
-    <splash density="port-hdpi" src="res/screen/android/splash_port_hdpi.png" />
-    <splash density="port-ldpi" src="res/screen/android/splash_port_ldpi.png" />
-    <splash density="port-mdpi" src="res/screen/android/splash_port_mdpi.png" />
-    <splash density="port-xhdpi" src="res/screen/android/splash_port_xhdpi.png" />
+    <preference name="SplashScreenDelay" value="2000" />
+    <preference name="SplashScreen" value="screen" />
+    <splash density="land-hdpi" src="res/android/splash.png" />
+    <splash density="land-ldpi" src="res/android/splash.png" />
+    <splash density="land-mdpi" src="res/android/splash.png" />
+    <splash density="land-xhdpi" src="res/android/splash.png" />
+    <splash density="port-hdpi" src="res/android/splash.png" />
+    <splash density="port-ldpi" src="res/android/splash.png" />
+    <splash density="port-mdpi" src="res/android/splash.png" />
+    <splash density="port-xhdpi" src="res/android/splash.png" />
+    <icon density="hdpi" src="res/android/icon.png" />
+    <icon density="ldpi" src="res/android/icon.png" />
+    <icon density="mdpi" src="res/android/icon.png" />
+    <icon density="xhdpi" src="res/android/icon.png" />
     <allow-intent href="market:*" />
     <name>Metas</name>
     <description>
@@ -32,5 +38,4 @@
     <allow-intent href="sms:*" />
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
-    <preference name="SplashScreenDelay" value="20000" />
 </widget>
