--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -1391,3 +1391,47 @@ ul.list_interna_proj li{
 .logo_prodam_des{
     padding: 10px 0 10px 0;
 }
+
+/*Classes da tela aguarde*/
+
+.bg-blk-transp-7{
+    background-color: rgba(0,0,0,0.7);
+}
+
+.z-idx-102{
+    z-index: 102;
+}
+
+.dspl-nn{
+    display: none;
+}
+
+.dspl-blk{
+    display: block;
+}
+
+#telaAguarde{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+#cont_telaAguarde{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 300px;
+    width: 300px;
+    
+    margin: -150px 0 0 -150px;
+
+}
+
+.font-br{
+    color:#FFFFFF;
+}
+
+.txt-alg-c{
+    text-align: center;
+}
+
